--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <link type="style" href="./style/index.css">
+</head>
 
 <body>
     <a href="./api/date.js">date.js</a>
