--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link type="style" href="./style/index.css">
+    <link rel="stylesheet" href="./style/index.css">
 </head>
 
 <body>
