--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-    <a href="./api/date.js">date.js</a>
+    <p class="center">
+        <a href="./api/date.js">date.js</a>
+    </p>
 </body>
 
 </html>
