--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <p class="center">
-        <a href="./api/date.js">date.js</a>
+        日期API<a href="./api/date.js">date.js</a>
     </p>
 </body>
 
