--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 </head>
 
 <body>
+    <p class="center">日期API<a href="./api/date" title="date">date.js</a></p>
     <p class="center">
-        日期API<a href="./api/date.js">date.js</a>
+        示例：<a href="./api/date" title="date">date</a>
+        示例：<a href="./api/date?date=2021,12,31,23:59:59" title="date">date?date=2021,12,31,23:59:59</a>
     </p>
 </body>
 
