--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 
 <body>
-    <p class="center">日期API<a href="./api/date" title="date">date.js</a></p>
+    <p class="center">日期API<a href="./api/date" title="date" target="_blank">date.js</a></p>
     <p class="center">
-        示例：<a href="./api/date" title="date">date</a>
-        示例：<a href="./api/date?date=2021,12,31,23:59:59" title="date">date?date=2021,12,31,23:59:59</a>
+        示例：<a href="./api/date" title="date" target="_blank">date</a>
+        <br>
+        示例：<a href="./api/date?date=2021,12,31,23:59:59" title="date" target="_blank">date?date=2021,12,31,23:59:59</a>
     </p>
 </body>
 
